// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollRevealFrame > renders correct HTML structure (all props set) 1`] = `
"<figure class="reveal-frame custom-class" style="--_frame-height: 400px; --_parallax-offset: 20rem; --_radius: 1.6rem;">
  <div class="reveal-content"></div>
</figure>"
`;

exports[`ScrollRevealFrame > renders correct HTML structure (default props) 1`] = `
"<figure class="reveal-frame" style="--_frame-height: 540px; --_parallax-offset: 36rem; --_radius: 0px;">
  <div class="reveal-content"></div>
</figure>"
`;
